# sig-agent

./: .cursorrules  .dockerignore  .env.example  .env.example.aws_lightsail  .env.example.docker  .env.example.local  .env.example.mongodb  .gitignore  .npmrc  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  README.md  docker-compose-embedded-mongo.yml  docker-compose-local.yml  docker-compose.production.yml  docker-compose.yml  makefile  pyproject.toml  requirements.txt  start-all.sh  start.sh  tailwind.config.js
.claude/commands/: add-context-payments.md  payments.md
.github/cla/: CLA.md
.github/workflows/: backend-tests.yml  cla-check.yml  cla-validate.yml  cla.yml  frontend-build.yml  gh-pages.yml  static.yml
backend/: README.md  list_modules.py  main.py  pyproject.toml  requirements.txt
backend/api/: main.py  models.py  (+6 more)
backend/docrouter_sdk/: README.md  pyproject.toml
backend/docrouter_sdk/api/: client.py  prompts.py
backend/docrouter_sdk/examples/: basic_docrouter_client.py
deployments/: DEPLOYMENT.md  QUICK_TEST.md  README.md  create-env-example.sh
docs/: ENV.md  INSTALL.aws.md  INSTALL.docker.md  INSTALL.local_devel.md  INSTALL.nextauth.md  INSTALL.ubuntu.md  README.aws.md  README.docker.md  README.local_devel.md  RELEASE_NOTES.md  authentication.md  aws_lambda.md  data_formats.md  env.md  index.html  stripe_integration.md
frontend/: .env.example  .gitignore  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
public/: index.html
tests-ui/: jest.config.js  package-lock.json  package.json  setup.ts  tsconfig.json
(+411 files in other folders)
