[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "docrouter-sdk"
version = "0.1.0"
description = "Python client library for the Smart Document Router API"
readme = "README.md"
authors = [
    {name = "Analytiq Hub", email = "andrei@analytiqhub.com"}
]
license = {text = "Apache License 2.0"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11"
]
requires-python = ">=3.9"
dependencies = [
    "requests>=2.0.0",
    "pydantic>=2.0.0",
    "python-dateutil>=2.0.0"
]

[project.urls]
"Homepage" = "https://github.com/analytiq/doc-router"
"Bug Tracker" = "https://github.com/analytiq/doc-router/issues"

[tool.setuptools]
packages = ["docrouter_sdk"]

[tool.black]
line-length = 88
target-version = ["py39"]

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
